objects/ssot__PromotionPartyTransaction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Party Usage Detail</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTransactionJournalId__c</fullName>
        <label>Loyalty Transaction Journal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPartyId__c</fullName>
        <label>Related Party</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPartyObject__c</fullName>
        <label>Related Party Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832111434_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionPartyTransaction_RelatedPar_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>PromotionPartyTransaction_RelatedPar_rel</relationshipLabel>
        <relationshipName>rel_1729832111434_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832122322_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionPartyTransaction_LoyaltyTra_rel</label>
        <referenceTo>ssot__LoyaltyTransactionJournal__dlm</referenceTo>
        <relationshipLabel>PromotionPartyTransaction_LoyaltyTra_rel</relationshipLabel>
        <relationshipName>rel_1729832122322_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659059278_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionPartyTransaction_PromotionI_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PromotionPartyTransaction_PromotionI_rel</relationshipLabel>
        <relationshipName>rel_1731659059278_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>